syntax= "proto3";

package countries;

message Empty {};

message Data {
    string _id = 1;
    string name = 2;
    string prefix = 3;
    string phone_prefix = 4;
    bool active = 5;

    message States {
        string _id = 1;
        string country_id = 2;
        string name = 3;
        string prefix = 4;
        string phone_prefix = 5;
        bool active = 6;

        message Cities {
            string _id = 1;
            string state_id = 2;
            string name = 3;
            string prefix = 4;
            string phone_prefix = 5;
            bool active = 6;
        }

        repeated Cities cities = 7;
    }
    
    repeated States state = 7;
};

message DataResponse {
    Data data = 1;
}

message DataMultipleResponse {
    repeated Data data = 1;
}

service DataProcessor {
    rpc PostData(Data) returns (DataResponse) {}
    rpc GetData(Empty) returns (DataMultipleResponse) {}
    rpc PutData(Data) returns (DataResponse) {}
    rpc DeleteData(Data) returns (Empty) {}
}




